home layout structure done

--- a/src/styles/components/Button.module.css
+++ b/src/styles/components/Button.module.css
@@ -12,6 +12,11 @@
   color: var(--white);
 }
 
+.light {
+  background-color: var(--white);
+  color: var(--secondary-color);
+}
+
 .secondary {
   background-color: var(--secondary-color);
   color: var(--white);
