--- a/src/styles/components/Header.module.css
+++ b/src/styles/components/Header.module.css
@@ -3,7 +3,7 @@ header css
 */
 
 .header__wrapper {
-  background-color: var(--white);
+  background-color: var(--secondary-color);
   padding: 1rem 4rem;
   display: flex;
   align-items: center;
