--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,3 +23,24 @@ body {
   --title-size: 3rem;
   --subtitle-size: 1.2rem;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #fff;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--lightgray);
+  border-radius: 0.5rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--gray);
+}
