--- a/src/styles/components/TrendingBlogs.module.css
+++ b/src/styles/components/TrendingBlogs.module.css
@@ -2,60 +2,84 @@
   padding: 1rem 0;
 }
 
-.trending__blog__first_row {
+.blog__item {
   display: flex;
+  margin-bottom: 1rem;
   align-items: center;
 }
 
-.trending__first_item {
-  padding: 0.5rem;
+.blog__info {
+  padding: 0 1rem;
+  flex: 1;
 }
 
-.trending__first_item h3 {
-  margin-top: 0.5rem;
+.blog__info p {
+  color: rgb(107, 107, 107);
 }
 
-.trending__first_item p {
-  font-size: 0.9rem;
-  margin-top: 0.5rem;
-}
-
-.trending__first_item .trending_image {
+.blog__image,
+.author__image {
   border-radius: 0.5rem;
   overflow: hidden;
-  max-width: 250px;
-  max-height: 250px;
-  width: 100%;
-  height: 100%;
 }
 
-.trending__blog__second_row {
+.blog__image {
+  width: 100px;
+  height: 100px;
+  animation: loading 0.5s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+}
+
+.blog__author {
   display: flex;
   align-items: center;
-  margin-top: 1rem;
+  margin-bottom: 0.5rem;
 }
 
-.trending__second_item {
-  padding: 1rem 0.5rem;
+.blog__author a {
+  margin-left: 0.6rem;
+  text-decoration: none;
+  color: var(--black);
+}
+
+.blog__author h4 {
+  font-weight: 400;
+  font-size: 0.9rem;
+}
+
+.author__title {
+  display: flex;
+  align-items: center;
+}
+
+.author__title p {
+  font-size: 0.9rem;
+  margin-left: 1rem;
+}
+
+.author__title p:last-child {
+  color: var(--secondary-color);
+  font-weight: 600;
+}
+
+@keyframes loading {
+  from {
+    background-color: var(--gray);
+  }
+
+  to {
+    background-color: var(--lightgray);
+  }
 }
 
 @media screen and (max-width: 480px) {
-  .trending__blog__first_row {
-    flex-direction: column;
-    align-items: unset;
+  .blog__image {
+    width: 120px;
+    height: 120px;
   }
-  .trending__first_item .trending_image {
-    max-width: 100%;
-    max-height: 300px;
-  }
-  .trending__first_item {
-    padding: 0;
-    margin-bottom: 2rem;
-  }
-  .trending__blog__second_row {
-    margin: 0;
-  }
-  .trending__second_item {
-    padding: 0;
+  .author__title p:last-child {
+    visibility: none;
+    display: none;
   }
 }
