--- a/src/styles/SingleBlog.module.css
+++ b/src/styles/SingleBlog.module.css
@@ -48,10 +48,7 @@
 }
 
 .blog__read_section {
-  padding: 1rem 0;
-}
-
-.blog__read_section {
+  padding: 1rem 2rem 0 0;
   margin-top: 1rem;
 }
 
@@ -65,6 +62,9 @@
 .blog__sidebar {
   max-width: 300px;
   width: 100%;
+  position: sticky;
+  top: 7rem;
+  height: max-content;
 }
 
 @media screen and (max-width: 768px) {
