--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -65,3 +65,8 @@ body {
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+
+.htsform__container {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
