--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -24,6 +24,8 @@
   }
   .login__form {
     margin-top: 25%;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
   }
   .login__form h1 {
     font-size: 1.5rem;
