--- a/src/styles/SingleBlog.module.css
+++ b/src/styles/SingleBlog.module.css
@@ -45,6 +45,12 @@
   justify-content: center;
   margin-right: 0.5rem;
   font-size: 0.8rem;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+
+.author__social i:hover {
+  background-color: var(--lightgray);
 }
 
 .blog__read_section {
@@ -57,6 +63,60 @@
   width: 100%;
   height: auto;
   margin-top: 1rem;
+  text-align: center;
+  background-color: var(--lightgray);
+  padding: 1rem 0.5rem;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
+.blog__title {
+  padding: 1rem;
+}
+
+.blog__share {
+  padding: 1rem 0 0 0;
+}
+
+.blog__share button {
+  width: 3rem;
+  height: 3rem;
+  border: none;
+  border-radius: 5rem;
+  margin: 0 0.5rem;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.blog__content {
+  margin: 1rem 0;
+}
+
+.blog__tags {
+  padding: 1rem;
+  background-color: var(--lightgray);
+  margin: 1rem 2rem 1rem 0;
+  border-radius: 1rem;
+}
+
+.blog__author__details,
+.blog__related {
+  padding: 1rem;
+  background-color: var(--lightgray);
+  border-radius: 1rem;
+  margin: 0rem 2rem 1rem 0;
+}
+
+.blog__tags__items button {
+  border: none;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+.blog__tags__items button:first-child {
+  margin-left: 0;
 }
 
 .blog__sidebar {
@@ -79,10 +139,26 @@
 }
 
 @media screen and (max-width: 480px) {
+  .blog__read_section {
+    padding: 1rem 0;
+  }
   .blog__read_section h1 {
     font-size: 1.5rem;
   }
   .author__info {
     font-size: 1rem;
+  }
+  .blog__title {
+    padding: 1rem 0.5rem;
+  }
+  .blog__tags h2,
+  .blog__author__details h2,
+  .blog__related h2 {
+    font-size: 1.1rem;
+  }
+  .blog__author__details,
+  .blog__related,
+  .blog__tags {
+    margin-right: 0;
   }
 }
