--- a/src/styles/components/AboutAuthor.module.css
+++ b/src/styles/components/AboutAuthor.module.css
@@ -18,6 +18,30 @@
   padding: 0.5rem 0;
 }
 
+.author__social {
+  display: flex;
+  align-items: center;
+  margin-top: 0.5rem;
+}
+
+.author__social i {
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: var(--gray);
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 0.5rem;
+  font-size: 0.8rem;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+
+.author__social i:hover {
+  background-color: var(--lightgray);
+}
+
 @media screen and (max-width: 480px) {
   .about_author__container {
     flex-direction: column;
