--- a/src/styles/SingleBlog.module.css
+++ b/src/styles/SingleBlog.module.css
@@ -42,6 +42,7 @@
   padding: 1rem 0.5rem;
   border-radius: 1rem;
   overflow: hidden;
+  position: relative;
 }
 
 .blog__title {
@@ -100,8 +101,25 @@
   margin: 0rem 2rem 1rem 0;
 }
 
+.blog__avg_rating {
+  position: absolute;
+  right: 0;
+  padding: 1rem;
+  top: 0;
+  background-color: var(--gray);
+  font-weight: 600;
+  z-index: 99;
+  border-bottom-left-radius: 1rem;
+}
+
+.blog__avg_rating i {
+  color: var(--secondary-color);
+  margin-right: 0.2rem;
+  font-size: 2rem;
+}
+
 .blog__sidebar {
-  max-width: 300px;
+  max-width: 250px;
   width: 100%;
   position: sticky;
   top: 7rem;
