--- a/src/styles/components/Button.module.css
+++ b/src/styles/components/Button.module.css
@@ -22,6 +22,20 @@
   color: var(--white);
 }
 
+.secondary__slim {
+  background-color: var(--secondary-color);
+  color: var(--white);
+  padding: 0.5rem 0.8rem;
+  font-size: 0.7rem;
+}
+
+.primary__slim {
+  background-color: var(--primary-color);
+  color: var(--white);
+  padding: 0.5rem 0.8rem;
+  font-size: 0.7rem;
+}
+
 .button:hover {
   opacity: 0.7;
 }
