--- a/src/styles/components/Rating.module.css
+++ b/src/styles/components/Rating.module.css
@@ -10,6 +10,7 @@
   color: var(--gray);
   cursor: pointer;
   transition: all 0.4s ease-in-out;
+  display: block;
 }
 
 .rating__container button.active {
