--- a/src/styles/components/OpinionBox.module.css
+++ b/src/styles/components/OpinionBox.module.css
@@ -14,33 +14,26 @@
   margin-top: 1rem;
 }
 
-.opinion__comments__form {
-  margin-top: 1rem;
+.opinion__comments__title {
   display: flex;
-  flex-direction: column;
+  align-items: center;
 }
 
-.opinion__comments__form__input {
-  border-radius: 1rem;
-  border: none;
-  padding: 1rem;
-  outline: none;
-  border: 1px solid var(--gray);
-  resize: vertical;
-  width: 100%;
+.opinion__comments__title p {
+  margin-right: 1rem;
+  font-size: 1rem;
 }
 
-.opinion__comments__form__btn {
-  padding: 0.8rem 1.2rem;
-  border-radius: 2rem;
+.opinion__comments__title button {
+  background-color: transparent;
   border: none;
-  margin-top: 0.5rem;
-  background-color: var(--secondary-color);
+  font-size: 1rem;
   cursor: pointer;
-  color: var(--white);
-  float: right;
+  padding: 0.2rem 0.5rem;
+  border: 1px solid var(--gray);
+  border-radius: 1rem;
 }
 
-.opinion__comments__form__btn:hover {
-  opacity: 0.7;
+.opinion__comments__title button i {
+  margin-left: 0.2rem;
 }
