--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -75,6 +75,25 @@ body {
   .htsform__container {
     margin-top: 2rem !important;
   }
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    display: none;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    display: none;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    display: none;
+  }
 }
 
 button {
