--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -76,6 +76,7 @@ body {
   min-height: 250px;
   border-radius: 0.2rem;
   padding: 0 1rem;
+  border: 1px solid var(--gray);
 }
 
 @media screen and (max-width: 480px) {
