--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,7 @@ body {
 :root {
   --primary-color: #006;
   --secondary-color: #ff9a33;
+  --green: #128806;
   --white: #fff;
   --black: #000;
   --gray: #eee;
