--- a/src/styles/components/Alert.module.css
+++ b/src/styles/components/Alert.module.css
@@ -12,6 +12,7 @@
     justify-content: center;
     width: max-content;
     border: 1px solid var(--gray);
+    transition: all .2s ease-out;
 }
 
 .alert__container.show {
@@ -37,8 +38,8 @@
 }
 
 .alert__loading span {
-    width: 3rem;
-    height: 3rem;
+    width: 2.6rem;
+    height: 2.6rem;
     border: .2rem solid var(--primary-color);
     display: block;
     border-radius: 5rem;
@@ -61,6 +62,7 @@
 
     .alert__container {
         width: 100%;
+        padding: 1.3rem;
     }
 }
 
