--- a/src/styles/components/SideNavbar.module.css
+++ b/src/styles/components/SideNavbar.module.css
@@ -24,6 +24,8 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    border-bottom: 1px solid var(--gray);
+    padding-bottom: 1rem;
 }
 
 .sidebar__profile_img {
@@ -60,12 +62,109 @@
     opacity: .8;
 }
 
+.sidebar__navigation {
+    display: block;
+    position: relative;
+    margin-top: 1rem;
+    padding: 1rem;
+    width: 100%
+}
+
+.sidebar__notification {
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    font-size: 2rem;
+    color: var(--white);
+    cursor: pointer;
+    background-color: var(--secondary-color);
+    width: 3rem;
+    height: 3rem;
+    border-radius: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sidebar__notification a {
+    text-decoration: none;
+    color: var(--white);
+}
+
+.sidebar__notification a span {
+    position: absolute;
+    right: -.6rem;
+    top: 0;
+    font-size: .9rem;
+    color: var(--black);
+    font-weight: 600;
+    background-color: var(--white);
+    border-radius: 1rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sidebar__navigation ul {
+    list-style: none;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 100%;
+}
+
+.sidebar__navigation ul li {
+    width: 100%;
+}
+
+.sidebar__navigation ul li a {
+    text-decoration: none;
+    padding: 1rem 2rem;
+    background-color: var(--gray);
+    display: flex;
+    color: var(--black);
+    border-radius: .5rem;
+    font-size: 1.1rem;
+    margin-bottom: .5rem;
+    align-items: center;
+    cursor: pointer;
+}
+
+.sidebar__navigation ul li a i {
+    margin-right: .5rem;
+}
+
+
+.sidebar__navigation ul li a span {
+    margin-left: .5rem;
+    background-color: var(--secondary-color);
+    padding: 0 .4rem;
+    border-radius: .5rem;
+    font-size: .9rem;
+    font-weight: bold;
+}
+
+.sidebar__navigation ul li a:hover,
+.sidebar__notification:hover {
+    opacity: .8;
+}
 
 @media screen and (max-width: 480px) {
-    .sidebar__close {
+
+    .sidebar__close,
+    .sidebar__notification {
         font-size: 1.1rem;
         width: 2.2rem;
         height: 2.2rem;
+    }
+
+
+    .sidebar__notification a span {
+        width: 1.2rem;
+        height: 1.2rem;
+        font-size: .8rem;
     }
 
     .sidebar__profile_img {
