--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,9 +10,9 @@ body {
 }
 
 :root {
-  --primary-color: #006;
-  --secondary-color: #ff9a33;
-  --green: #128806;
+  --primary-color: #fd811b;
+  --secondary-color: #197fc1;
+  --green: #49bffa;
   --white: #fff;
   --black: #000;
   --gray: #eee;
