--- a/src/styles/components/Logo.module.css
+++ b/src/styles/components/Logo.module.css
@@ -1,22 +1,22 @@
 .logo__wrapper {
-  width: 200px;
   transition: all 0.4s ease-in-out;
+  display: block;
 }
 
 @media screen and (max-width: 1024px) {
   .logo__wrapper {
-    width: 150px;
+    width: max-content;
   }
 }
 
 @media screen and (max-width: 768px) {
   .logo__wrapper {
-    width: 140px;
+    width: max-content;
   }
 }
 
 @media screen and (max-width: 480px) {
   .logo__wrapper {
-    width: 100px;
+    width: max-content;
   }
 }
