--- a/src/styles/components/Navigation.module.css
+++ b/src/styles/components/Navigation.module.css
@@ -33,7 +33,7 @@
 
 .navigation__menu li a.active,
 .navigation__menu li a:hover {
-  border-color: var(--primary-color);
+  border-color: var(--white);
 }
 
 @media screen and (max-width: 1024px) {
