--- a/src/styles/components/SideNavbar.module.css
+++ b/src/styles/components/SideNavbar.module.css
@@ -139,11 +139,11 @@
 
 .sidebar__navigation ul li a span {
     margin-left: .5rem;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     padding: 0 .4rem;
     border-radius: .5rem;
     font-size: .9rem;
-    font-weight: bold;
+    color: var(--white);
 }
 
 .sidebar__navigation ul li a:hover,
