--- a/src/styles/components/Logo.module.css
+++ b/src/styles/components/Logo.module.css
@@ -15,8 +15,10 @@
   }
 
   .logo {
-    border-top-right-radius: 1.5rem;
-    border-top-left-radius: 1.5rem;
+    border-top-right-radius: 5rem;
+    border-top-left-radius: 5rem;
+    border-bottom-left-radius: 4rem;
+    border-bottom-right-radius: 1rem;
   }
 }
 
