--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,6 +22,11 @@ body {
   --danger: red;
 }
 
+
+.font-swash {
+  font-family: 'Berkshire Swash', cursive;
+}
+
 body {
   background-color: var(--white);
 }
