--- a/src/styles/u/Notification.module.css
+++ b/src/styles/u/Notification.module.css
@@ -8,6 +8,11 @@
     margin-top: 1rem;
 }
 
+.notification__list {
+    flex: 1;
+    width: 100%;
+}
+
 .notification__filter {
     background-color: var(--gray);
     padding: 1rem;
@@ -25,9 +30,9 @@
     width: 100%;
     border: none;
     background-color: var(--secondary-color);
-    border-radius: .5rem;
+    border-radius: 5rem;
     margin: .2rem 0;
-    padding: 1rem 2rem;
+    padding: .5rem 2rem;
     cursor: pointer;
     font-size: 1.2rem;
     color: var(--white);
@@ -41,12 +46,29 @@
     opacity: .8;
 }
 
+.notification__filter button.active {
+    background-color: var(--primary-color);
+}
+
 .notification__filter button span {
-    font-size: .9rem;
-    background-color: var(--white);
-    color: var(--black);
+    font-size: .8rem;
+    color: var(--white);
     padding: .2rem;
+    font-weight: 600;
+}
+
+.notification__list_wrapper {
+    padding: 0 1rem;
+    height: calc(100vh - 12rem);
+    width: 100%;
     border-radius: .5rem;
+}
+
+.notification__item {
+    padding: .5rem;
+    border-radius: .5rem;
+    background-color: var(--gray);
+    margin-bottom: .5rem;
 }
 
 @media screen and (max-width: 868px) {
@@ -56,6 +78,7 @@
 
     .notification__container {
         flex-direction: column;
+        align-items: flex-start;
     }
 
     .notification__filter {
@@ -64,16 +87,21 @@
         overflow-x: auto;
         margin-bottom: .5rem;
         flex-direction: row;
+        padding: .5rem;
     }
 
     .notification__filter button {
-        padding: .5rem;
+        padding: .3rem 1rem;
         margin: 0 .5rem;
         font-size: 1rem;
     }
 
     .notification__filter button span {
         font-size: .8rem;
+    }
+
+    .notification__list_wrapper {
+        padding: 0;
     }
 }
 
