--- a/src/styles/u/Profile.module.css
+++ b/src/styles/u/Profile.module.css
@@ -1,5 +1,5 @@
 .profile__wrapper {
-    padding: 2rem 4rem;
+    padding: 0rem 4rem 4rem 4rem;
 }
 
 .profile__fieldset {
@@ -13,9 +13,10 @@
 .profile__fieldset legend {
     font-size: 1.2rem;
     background-color: var(--light);
-    padding: .5rem 1rem;
+    padding: .1rem 1rem;
     border-radius: .5rem;
     font-weight: 600;
+    margin-left: -.5rem;
 }
 
 .profile__action {
@@ -23,58 +24,50 @@
     align-items: center;
     justify-content: space-between;
     position: sticky;
-    top: 6.2rem;
+    top: 4.1rem;
+    padding-top: 1.8rem;
+    background-color: var(--white);
 }
 
-.profile__personal_form {
+.profile__form {
     display: grid;
+    transition: all .4s ease;
+}
+
+.full div:last-child {
+    margin-right: 1rem;
+}
+
+.grid-4 {
+    grid-template-columns: 24% 24% 24% 24%;
+}
+
+.grid-3 {
     grid-template-columns: 33% 33% 33%;
 }
 
-
-.profile__input {
-    margin-bottom: 1rem;
-    margin-right: .2rem;
+.grid-2 {
+    grid-template-columns: 49% 49%;
 }
-
-.profile__input label {
-    font-weight: 600;
-    margin-bottom: .2rem;
-}
-
-.profile__input input,
-.profile__input textarea,
-.profile__input select {
-    width: 100%;
-    padding: 1rem;
-    border: 1px solid var(--gray);
-    outline: none;
-    background: var(--lightgray);
-    border-radius: 0.5rem;
-    resize: vertical;
-}
-
-
-.profile__input input:disabled,
-.profile__input textarea:disabled,
-.profile__input select:disabled {
-    background: var(--gray);
-    padding: 1rem 0;
-}
-
 
 @media screen and (max-width: 868px) {
     .profile__wrapper {
-        padding: 1rem;
+        padding: 0 1rem 4rem 1rem;
+    }
+
+    .profile__action {
+        padding-top: .5rem;
     }
 
     .profile__fieldset {
         margin-top: 1.5rem;
     }
 
+    .grid-4 {
+        grid-template-columns: 50% 50%;
+    }
 
-    .profile__personal_form {
-        display: grid;
+    .grid-3 {
         grid-template-columns: 50% 50%;
     }
 }
@@ -89,8 +82,19 @@
         font-size: 1rem;
     }
 
-    .profile__personal_form {
+    .profile__form {
         display: grid;
+        grid-template-columns: 100%;
+    }
+
+
+    .full div:last-child {
+        margin-right: 0rem;
+    }
+
+    .grid-4,
+    .grid-2,
+    .grid-3 {
         grid-template-columns: 100%;
     }
 }
