--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,6 +32,11 @@ body {
   background-color: var(--white);
 }
 
+main {
+  max-width: 1378px;
+  margin: 0 auto;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 5px;
